update old techstacks urls

--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -160,9 +160,9 @@ You can use the same [@servicestack/cli](https://github.com/ServiceStack/service
 
 This makes the `dart-ref` script globally available in your `PATH` which you can execute with the URL of the remote ServiceStack Instance you want to generated DTOs for, e.g:
 
-    $ dart-ref https://www.techstacks.io
+    $ dart-ref https://techstacks.io
 
-This will generate Dart DTOs for the [entire TechStacks API](https://www.techstacks.io/metadata):
+This will generate Dart DTOs for the [entire TechStacks API](https://techstacks.io/metadata):
 
     Saved to: techstacks.dtos.dart
 
@@ -177,14 +177,14 @@ dependencies:
 
 Saving `pubspec.yaml` in VS Code with the [Dart Code Extension](https://dartcode.org) automatically calls `flutter packages get` to add any new dependencies to your project.
 
-We now have everything we need to be able to make typed API requests to any of [TechStacks APIs](https://www.techstacks.io/metadata) with a shared `JsonServiceClient` instance populated with the base URL of the remote endpoint, e.g:
+We now have everything we need to be able to make typed API requests to any of [TechStacks APIs](https://techstacks.io/metadata) with a shared `JsonServiceClient` instance populated with the base URL of the remote endpoint, e.g:
 
 ```dart
 import 'package:servicestack/client.dart';
 
 import 'techstacks.dtos.dart';
 
-var client = new JsonServiceClient("https://www.techstacks.io");
+var client = new JsonServiceClient("https://techstacks.io");
 
 main() async {
   var response = await client.get(new GetTechnology(slug: "flutter"));
@@ -268,7 +268,7 @@ AngularDart or Dart Web Apps can use `JsonWebClient` by importing `web_client.da
 ```dart
 import 'package:servicestack/web_client.dart';
 
-var client = new JsonWebClient("https://www.techstacks.io");
+var client = new JsonWebClient("https://techstacks.io");
 ```
 
 ### IServiceClient API
@@ -344,7 +344,7 @@ Saving `pubspec.yaml` automatically runs [flutter packages get](https://flutter.
 Our App will be making API calls to 2 different ServiceStack instances which we'll need to get typed DTOs for using the `dart-ref` command-line utility:
 
     cd lib
-    dart-ref https://www.techstacks.io
+    dart-ref https://techstacks.io
     dart-ref http://test.servicestack.net test
 
 Which will save the DTOs for each endpoint in different files:
@@ -372,7 +372,7 @@ import 'test.dtos.dart';
 import 'techstacks.dtos.dart';
 
 const TestBaseUrl = "http://test.servicestack.net";
-const TechStacksBaseUrl = "https://www.techstacks.io";
+const TechStacksBaseUrl = "https://techstacks.io";
 
 var testClient = new JsonServiceClient(TestBaseUrl);
 var techstacksClient = new JsonServiceClient(TechStacksBaseUrl);
@@ -662,7 +662,7 @@ class HelloWorldComponent {
   var result = "";
   var imageSrc = "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="; // 1x1 pixel
   static const TestBaseUrl = "http://test.servicestack.net";
-  static const TechStacksBaseUrl = "https://www.techstacks.io";
+  static const TechStacksBaseUrl = "https://techstacks.io";
   var testClient = new JsonWebClient(TestBaseUrl);
   var techstacksClient = new JsonWebClient(TechStacksBaseUrl);
 
@@ -932,7 +932,7 @@ Whilst proxying provides the cleanest and most transparent solution, it can add 
 const usingProxy = location.host == "techstacks.io";
 
 const BaseUrl = usingProxy
-    ? "https://www.techstacks.io/"  // .NET Core App Server on AWS LightSail
+    ? "https://techstacks.io/"  // .NET Core App Server on AWS LightSail
     : "/";
 
 const AuthBaseUrl = usingProxy
@@ -943,7 +943,7 @@ export const client = new JsonServiceClient(BaseUrl);
 export const authClient = new JsonServiceClient(AuthBaseUrl); 
 ```
 
-Where [https://techstacks.io](https://techstacks.io) serves the static website hosted from Netlify's CDN and [https://www.techstacks.io](https://www.techstacks.io) serves content directly from the App Server via an nginx reverse proxy.
+Where [https://techstacks.io](https://techstacks.io) serves the static website hosted from Netlify's CDN and [https://techstacks.io](https://techstacks.io) serves content directly from the App Server via an nginx reverse proxy.
 
 The different domains means we need to transfer the Authenticated Session that's attached to the [techstacks.io](https://techstacks.io) domain by converting the Authenticated Session into a JWT Token that's sent to the App Server in parallel requests to retrieve the Authenticated User Info and convert the JWT Token into a Cookie so it's re-sent on every subsequent request to the App Server: 
 
@@ -1639,7 +1639,7 @@ public class BackgroundAdminServices : Service
 }
 ```
 
-This lets you can call [/mq/stats](https://www.techstacks.io/mq/stats.json) to view a summary of **all messages processed** since the last time the App was restarted and [/mq/status](https://www.techstacks.io/mq/status) to view **all Queues** the Background Service is currently listening to and the **statistics of each individual MQ worker**. 
+This lets you can call [/mq/stats](https://techstacks.io/mq/stats.json) to view a summary of **all messages processed** since the last time the App was restarted and [/mq/status](https://techstacks.io/mq/status) to view **all Queues** the Background Service is currently listening to and the **statistics of each individual MQ worker**. 
 
 Here's a snapshot of what this looks like for TechStacks with 4 threads listening to `SendNotification` messages and 1 thread listening to `SendSystemEmail`:
 
