--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -3015,7 +3015,7 @@ import 'package:servicestack/client.dart';
 import 'techstacks.dtos.dart';              // Add ServiceStack Reference DTOs
 
 //...
-var client = new JsonServiceClient("https://www.techstacks.io");
+var client = new JsonServiceClient("https://techstacks.io");
 var response = await client.get(new GetTechnology(slug: "flutter"));
 ```
 See the [HelloFlutter](https://github.com/ServiceStackApps/HelloFlutter) project for a working example.
@@ -3030,7 +3030,7 @@ import 'package:servicestack/web_client.dart';
 import 'techstacks.dtos.dart';              // Add ServiceStack Reference DTOs
 
 //...
-var client = new JsonWebClient("https://www.techstacks.io");
+var client = new JsonWebClient("https://techstacks.io");
 var response = await client.get(new GetTechnology(slug: "flutter"));
 ```
 
