--- a/docs/_releases/v5.12.md
+++ b/docs/_releases/v5.12.md
@@ -1193,7 +1193,11 @@ Output:
 Saved to: techstacks.io-FindTechStacks.ipynb
 ```
 
+![](../images/apps/jupyter-csharp.png)
+
 ### Generate C# Jupyter Notebooks
+
+<iframe width="896" height="525" src="https://www.youtube.com/embed/vt92pbet5bY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 Use `x jupyter-csharp` to display different usage examples for generating C# Jupyter Notebooks:
 
@@ -1208,7 +1212,11 @@ Options:
  -include <pattern>     Include Types DTOs pattern
 ```
 
+![](../images/apps/jupyter-fsharp.png)
+
 ### Generate F# Jupyter Notebooks
+
+<iframe width="896" height="525" src="https://www.youtube.com/embed/PxH3K5WIDx8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 Use `x jupyter-fsharp` to display different usage examples for generating F# Jupyter Notebooks:
 
