change title to make linkable

--- a/docs/_releases/v5.12.md
+++ b/docs/_releases/v5.12.md
@@ -926,7 +926,7 @@ Alternatively you can use `htmldump` to generate API responses in a HTML UI whic
 [![](../images/apps/jupyterlab-mybinder-techstacks.png)](https://github.com/ServiceStack/jupyter-notebooks/blob/main/techstacks.io-FindTechnologies.ipynb)
 
 
-### Jupyter Notebooks
+### Interactive Jupyter Notebooks
 
 [![](../images/apps/jupyter-splash.png)](https://jupyter.org)
 
