--- a/docs/_releases/v5.12.md
+++ b/docs/_releases/v5.12.md
@@ -1365,6 +1365,8 @@ Another way to work with Jupyter, C# and ServiceStack generated notebooks is to 
 
 Post Command is a collection of command line utils that lets you easily discover, inspect and invoke ServiceStack endpoints from a single command.
 
+<iframe width="896" height="525" src="https://www.youtube.com/embed/FcXG4RnlVQk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 All command line utils are available in the latest [dotnet tool](/dotnet-tool) which can be installed from:
 
     $ dotnet tool install --global x 
