Change all `releases` links to use `_` instead of dots. Create copies with old names during deployment for external links. Fix all relative links to use new releases paths.

--- a/docs/releases/v4_0_56.md
+++ b/docs/releases/v4_0_56.md
@@ -2015,4 +2015,4 @@ one to checkout when you can set aside time for a long, good read.
 - New `IHasErrorCode` can be used to customize the `ErrorCode` used, instead of its Exception Type
 - New `AppHost.OnLogError` can be used to override and suppress service error logging
 
-# [v4.0.54 Release Notes](/releases/v4.0.54)
+# [v4.0.54 Release Notes](/releases/v4_0_54)
