--- a/docs/releases/v4_0_58.md
+++ b/docs/releases/v4_0_58.md
@@ -1,10 +1,7 @@
 ---
-title: v4.0.60 Release Notes
-slug: v4-0-60
+title: v4.0.58 Release Notes
+slug: v4-0-58
 ---
-> Quick fix release build that resolves issues reported with Add ServiceStack Reference in v4.0.58.
-The v4.0.58 Release Notes below contains new features added in this release:
-
 We've got another jam-packed release with improvements and polish across the board, starting with exciting 
 new API Key and JWT Auth Providers enabling fast, stateless and centralized Auth Services, a modernized API 
 surface for OrmLite, new GEO capabilities in Redis, Logging for Slack, performance and memory improvements 
@@ -388,7 +385,7 @@ The Service Clients offer additional high-level functionality where it's able to
 a new JWT Token after it expires by handling when the configured JWT Token becomes invalidated in the 
 `OnAuthenticationRequired` callback. Here we can retrieve a new JWT Token that we can fetch using a 
 different Service Client accessing a centralized and independent Auth Microservice that's configured with 
-both API Key and JWT Token Auth Providers. We can fetch a new JWT Token by calling ServiceStack's 
+both API Key and JWT Token Auth Providers. Web can fetch a new JWT Token by calling ServiceStack's 
 built-in `Authenticate` Service with our **secret** API Key (that by default never invalidates unless revoked).
 
 If authenticated, sending an empty `Authenticate()` DTO will return the currently Authenticated User Info 
@@ -773,30 +770,9 @@ var authResponse = client.Send(new Authenticate {
 var response = client.Get(new Secured { ... });
 ```
 
-However this only establishes an **Authenticated Session** to a single Server that only lasts until the
-session stored on the Server is valid. The easiest way to tell ServiceStack to convert the Session into a
-stateless JWT Cookie instead is to set the `UseTokenCookie` option when authenticating, e.g:
-
-```csharp
-var authResponse = client.Send(new Authenticate {
-    provider = "credentials",
-    UserName = username,
-    Password = password,
-    UseTokenCookie = true
-});
-
-//Uses stateless ss-tok Cookie with our Session encapsulated in JWT Token
-var response = client.Get(new Secured { ... }); 
-var jwtToken = client.GetTokenCookie(); //From ss-tok Cookie
-```
-
-This also removes the our Session from the App Servers Cache as now the Users **Authenticated Session** is
-contained solely in the JWT Cookie and is valid until the JWT Cookies Expiration, instead of determined
-by Server Session State.
-
-Another way we can access our Token is to call the `ConvertSessionToToken` Service which also converts our 
-currently Authenticated Session into a JWT Token which we can use instead to communicate with all our 
-independent Services, e.g:
+However this only establishes an **Authenticated Session** to a single Server. Another way we can access 
+our Token is to call the `ConvertSessionToToken` Service which will convert our currently Authenticated 
+Session into a JWT Token which we can use instead to communicate with all our independent Services, e.g:
 
 ```csharp
 var tokenResponse = client.Send(new ConvertSessionToToken());
@@ -835,30 +811,6 @@ $.post("/session-to-token");
 ```
 
 Likewise this API lets you convert Sessions created by any of the OAuth providers into a stateless JWT Token.
-
-### Switching existing Sites to JWT
-
-Thanks to the flexibility and benefits of using stateless JWT Tokens, we've upgraded both our Single Page App
-https://techstacks.io which uses Twitter and GitHub OAuth to [use JWT with a single Ajax call](https://github.com/ServiceStackApps/TechStacks/blob/78ecd5e390e585c14f616bb27b24e0072b756040/src/TechStacks/TechStacks/js/user/services.js#L30):
-
-```javascript
-$.post("/session-to-token");
-```
-
-We've also upgraded https://servicestack.net which as it uses normal Username/Password Credentials Authentication 
-(i.e. instead of redirects in OAuth), it doesn't need any additional network calls as we can add the `UseTokenCookie`
-option as a hidden variable in our FORM request:
-
-```html
-<form id="form-login" action="/auth/login">
-    <input type="hidden" name="UseTokenCookie" value="true" />
-    ...
-</form>
-```
-
-Which just like `ConvertSessionToToken` returns a populated session in the **ss-tok** Cookie so now 
-both [techstacks.io](https://techstacks.io) and [servicestack.net](https://servicestack.net) can maintain 
-uninterrupted Sessions across multiple redeployments without a persistent Sessions cache.
 
 ### JWT Configuration
 
@@ -944,7 +896,7 @@ More examples of both the new API Key and JWT Auth Providers are available in
 
 ### Cleaner, Modernized API Surface
 
-As [mentioned in the last release](/releases/v4.0.56#deprecating-legacy-ormlite-apis)
+As [mentioned in the last release](/releases/v4_0_56#deprecating-legacy-ormlite-apis)
 we've moved OrmLite's deprecated APIs into the `ServiceStack.OrmLite.Legacy` namespace leaving a clean, modern 
 API surface in OrmLite's default namespace.
 
@@ -1555,4 +1507,4 @@ using (new HttpResultsFilter { BytesResult = "mocked".ToUtf8Bytes() })
 }
 ```
 
-# [v4.0.56 Release Notes](/releases/v4.0.56)
+# [v4.0.56 Release Notes](/releases/v4_0_56)
