--- a/docs/releases/v4_5_10.md
+++ b/docs/releases/v4_5_10.md
@@ -1217,6 +1217,6 @@ using (var appHost = new BasicAppHost {
  - Empty Collections are now ignored AutoQuery Filters
  
 
-# [v4.5.8 Release Notes](/releases/v4.5.8)
+# [v4.5.8 Release Notes](/releases/v4_5_8)
  
  
