--- a/docs/releases/v4_5_2.md
+++ b/docs/releases/v4_5_2.md
@@ -741,4 +741,4 @@ now **case-insensitive** to match the behavior of SELECT custom fields.
 
 v4.5.4 is just a quick-fix release to fix to some NuGet packages so they reference the same dependency version.
 
-# [v4.5.0 Release Notes](/releases/v4.5.0)
+# [v4.5.0 Release Notes](/releases/v4_5_0)
