--- a/docs/releases/v4_5_8.md
+++ b/docs/releases/v4_5_8.md
@@ -1229,7 +1229,7 @@ GlobalRequestFiltersAsync.Add(async (req,res,dto) => {
 
 ## Enhanced Compression Options
 
-We've followed up [Request Compression](/releases/v4.5.6#clientserver-request-compression) added in the last release
+We've followed up [Request Compression](/releases/v4_5_6#clientserver-request-compression) added in the last release
 with more compression features in this release including:
 
 ### `[CompressResponse]` Attribute
@@ -1682,4 +1682,4 @@ msbuild format.
 - Additional `StatusCode`, `StatusDescription`, `ExceptionSource` and `ExceptionData` were added on `RequestLogEntry`
 - `OnEndRequestCallbacks` added to `IAppHost`  
 
-# [v4.5.6 Release Notes](/releases/v4.5.6)
+# [v4.5.6 Release Notes](/releases/v4_5_6)
