--- a/docs/releases/v5_1_0.md
+++ b/docs/releases/v5_1_0.md
@@ -2376,9 +2376,9 @@ New customizations hooks are available when inheriting `AuthUserSession` allowin
 
 ## Patch Release Versions
 
-As a [reminder from last release](/releases/v5.0.0#enhancement-releases) we're dedicating time immediately after each release to resolve any issues. If any priority issues are reported and resolved we'll release them in new patch releases, e.g. **5.1.1**, **5.1.2**, etc. These will be non-breaking releases that will be safe to upgrade.
+As a [reminder from last release](/releases/v5_0_0#enhancement-releases) we're dedicating time immediately after each release to resolve any issues. If any priority issues are reported and resolved we'll release them in new patch releases, e.g. **5.1.1**, **5.1.2**, etc. These will be non-breaking releases that will be safe to upgrade.
 
 We hope you enjoy this release, feel free to ask any questions or leave any feedback in [techstacks.io/servicestack](https://techstacks.io/servicestack), the [Customer Forums](https://forums.servicestack.net) or StackOverflow
 
 
-# [v5.0.2 Release Notes](/releases/v5.0.0)
+# [v5.0.2 Release Notes](/releases/v5_0_0)
