--- a/docs/releases/v5_2.md
+++ b/docs/releases/v5_2.md
@@ -3307,4 +3307,4 @@ LogManager.LogFactory = new SerilogFactory(new LoggerConfiguration()
 - `JsConfig.ThrowOnDeserializationError` was renamed to `JsConfig.ThrowOnError`
 
 
-# [v5.1.0 Release Notes](/releases/v5.1.0)
+# [v5.1.0 Release Notes](/releases/v5_1_0)
