--- a/docs/releases/v5_5.md
+++ b/docs/releases/v5_5.md
@@ -2361,7 +2361,7 @@ from Autocomplete in browsers who are better able to complete previously visited
 
 Our `web` (and `app`) .NET Core tools have graduated to become a versatile invaluable companion for all ServiceStack developers.
 
-It builds on our last [v5.4 release](/releases/v5.4) where it served as a [Sharp App](https://sharpscript.net/docs/sharp-apps) 
+It builds on our last [v5.4 release](/releases/v5_4) where it served as a [Sharp App](https://sharpscript.net/docs/sharp-apps) 
 delivery platform where they can be run as a .NET Core Windows Desktop App with `app` or as a cross-platform Web App launcher 
 using `web` and we've already how it's now a [`#Script` runner](#sharp-scripts) with `web run` and into a 
 [Live `#Script` playground](#live-script-with-web-watch) with `web watch`.
@@ -4467,4 +4467,4 @@ Large blobs `>100MB` are now streamed in chunks thanks to [@DeonHeyns](https://g
 
 
 
-# [v5.4 Release Notes](/releases/v5.4)
+# [v5.4 Release Notes](/releases/v5_4)
