--- a/docs/releases/v5_7.md
+++ b/docs/releases/v5_7.md
@@ -33,7 +33,7 @@ Which restores the existing behavior to .NET Core 3 of serializing directly to t
 ### Internal Changes
 
 Whilst most of ServiceStack's other internal HTTP Handlers were already being written asynchronously when ServiceStack was rewritten to be 
-built on top of Async Handlers [back in its first v4 Release](/releases/v4.0.0#server-side-async-support), .NET Core 3's mandate
+built on top of Async Handlers [back in its first v4 Release](/releases/v4_0_0#server-side-async-support), .NET Core 3's mandate
 highlighted our [Metadata Pages](/metadata-page) needed to be refactored to use async writes as well as some existing deprecated sync 
 Response Write APIs that needed to be marked to allow Sync. Each of the deprecated sync write APIs have async API equivalents that you can move to when ready.
 
@@ -290,7 +290,7 @@ var xname = "Text".ConvertTo<XName>(); //uses implicit string cast in XName
 
 ## #Script
 
-We've seen great reception of [Gist Desktop Apps](/releases/v5.6#gist-desktop-apps) from the last v5.6 release with a 
+We've seen great reception of [Gist Desktop Apps](/releases/v5_6#gist-desktop-apps) from the last v5.6 release with a 
 nice shoutout from [Jon Galloway](https://twitter.com/jongalloway) in the 
 [ASP.NET Community August Stand up](https://www.youtube.com/watch?v=a2lq4yEfJpk&feature=youtu.be&t=1529), 
 a featured [blog post](https://www.hanselman.com/blog/SharpScriptFromServiceStackLetsYouRunNETAppsDirectlyFromAGitHubGist.aspx)
