--- a/docs/releases/v5_9.md
+++ b/docs/releases/v5_9.md
@@ -3764,7 +3764,7 @@ ScriptConfig.AllowAssignmentExpressions = false;
 
 At the time we valued human-friendly syntax over JS compatibility however over the years it's become clearer that language familiarity is more important than enhanced human-friendly syntax as it makes it much easier for devs who knows JS (i.e. most) to use `#Script`. Keeping compatibility with JS syntax also helps in other areas like code portability, JS tooling and syntax highlighters and linters, etc. 
 
-JS compatibility was the primary motivation for [transitioning to the Pipe Forward operator](/releases/v5.7#transition-to-js-pipeline-operator-syntax) whose future incorporation into JS will have a lot less friction then continuing to use the unix pipe `|` operator.
+JS compatibility was the primary motivation for [transitioning to the Pipe Forward operator](/releases/v5_7#transition-to-js-pipeline-operator-syntax) whose future incorporation into JS will have a lot less friction then continuing to use the unix pipe `|` operator.
 
 The Pipe Forward operator makes it more obvious that the **output of the left expression** is passed as the **input of the right target** which needs to be either a [script method](https://sharpscript.net/docs/methods) or a [filter transformer](https://sharpscript.net/docs/transformers#filter-transformers) however it could be forgiven to [confuse it as an assignment expression](https://forums.servicestack.net/t/virtualfilesystem-for-script-page/7971/5?u=mythz) where the output of the left expression was assigned to the `sliders` variable:
 
