--- a/docs/releases/v4_0_62.md
+++ b/docs/releases/v4_0_62.md
@@ -533,7 +533,7 @@ var response = encryptedClient.Send(new Hello { Name = "World" });
 
 ## Last release supporting .NET 4.0
 
-As [announced earlier this year](/releases/v4.0.54#warning-net-40-builds-will-cease-after-august-1-2016)
+As [announced earlier this year](/releases/v4_0_54#warning-net-40-builds-will-cease-after-august-1-2016)
 in preparation for .NET Core, this will be our last release supporting .NET 4.0. Starting from next release 
 all projects will be upgraded to .NET 4.5. Should you need it, the .NET 4.0 compatible ServiceStack source code
 will remain accessible in the `net40` branches of all major ServiceStack Github repositories.
@@ -1204,4 +1204,4 @@ Plugins.Add(new CustomRequestFilter((req,res,dto) => {
 }));
 ```
 
-# [v4.0.60 Release Notes](/releases/v4.0.60)
+# [v4.0.60 Release Notes](/releases/v4_0_60)
