--- a/docs/releases/v4_5_0.md
+++ b/docs/releases/v4_5_0.md
@@ -5,7 +5,7 @@ title: v4.5.0 Release Notes
 
 The major change in this release and the reason for the major version number increase is that **all** packages 
 have been **upgraded to .NET 4.5** as 
-[announced earlier this year](/releases/v4.0.54#warning-net-40-builds-will-cease-after-august-1-2016). 
+[announced earlier this year](/releases/v4_0_54#warning-net-40-builds-will-cease-after-august-1-2016). 
 If your ServiceStack projects are already on .NET 4.5 this will be a seamless update just like any other 
 release except it will install **.NET 4.5** ServiceStack .dlls instead of the previous **.NET 4.0** dlls.
 
@@ -32,7 +32,7 @@ this release can be attributable to the upgrade to .NET 4.5.
 ## [.NET Core support for ServiceStack.Redis!](https://github.com/ServiceStack/ServiceStack.Redis/blob/netcore/docs/pages/netcore.md)
 
 In following the
-[.NET Core support of our Text and Client libraries](/releases/v4.0.62#net-core-support-for-servicestackclient) 
+[.NET Core support of our Text and Client libraries](/releases/v4_0_62#net-core-support-for-servicestackclient) 
 in our last release we've extended our support for .NET Core in this release to now also include 
 [ServiceStack.Redis](https://github.com/ServiceStack/ServiceStack.Redis)
 where we now have .NET Core builds for our [Top 3 popular NuGet packages](https://www.nuget.org/profiles/servicestack)
@@ -351,4 +351,4 @@ by an SSL-terminating Proxy and containing the `X-Forwarded-Proto = https` HTTP 
 You can override `AppHost.UseHttps()` to change this behavior.
 
 
-# [v4.0.62 Release Notes](/releases/v4.0.62)
+# [v4.0.62 Release Notes](/releases/v4_0_62)
