--- a/docs/releases/v4_5_14.md
+++ b/docs/releases/v4_5_14.md
@@ -1304,4 +1304,4 @@ The new `[IgnoreOnInsert]` and `[IgnoreOnUpdate]` attributes can be used to igno
  - The new `SqlConcat`, `SqlCurrency`, `SqlBool` and `SqlLimit` APIs can help creating cross-platform SQL, see [SqlDialectTests.cs](https://github.com/ServiceStack/ServiceStack.OrmLite/blob/master/tests/ServiceStack.OrmLite.Tests/SqlDialectTests.cs) for examples.
 
 
-# [v4.5.10 Release Notes](/releases/v4.5.10)
+# [v4.5.10 Release Notes](/releases/v4_5_10)
