--- a/docs/releases/v5_0_0.md
+++ b/docs/releases/v5_0_0.md
@@ -729,11 +729,11 @@ The `mvc` template differentiates the most between .NET Core and ASP.NET version
 
 #### ServiceStack.Razor
 
-The `razor` Template is configured to develop Websites using [ServiceStack.Razor](http://razor.servicestack.net) for developing server-generated Websites using Razor without MVC Controllers which lets you create Content Razor Pages that can be called directly or View Pages for generating HTML Views for existing Services. The source code for .NET Core and ASP.NET Framework projects are nearly identical despite being completely different implementations with the .NET Core version being retrofitted on top of .NET Core MVC Views. Use `razor` templates if you like Razor and prefer the [API First Development model](/releases/v4.5.14#end-user-language-with-low-roi) or plan on developing Websites for both .NET Core and ASP.NET and would like to be easily able to migrate between them.
+The `razor` Template is configured to develop Websites using [ServiceStack.Razor](http://razor.servicestack.net) for developing server-generated Websites using Razor without MVC Controllers which lets you create Content Razor Pages that can be called directly or View Pages for generating HTML Views for existing Services. The source code for .NET Core and ASP.NET Framework projects are nearly identical despite being completely different implementations with the .NET Core version being retrofitted on top of .NET Core MVC Views. Use `razor` templates if you like Razor and prefer the [API First Development model](/releases/v4_5_14#end-user-language-with-low-roi) or plan on developing Websites for both .NET Core and ASP.NET and would like to be easily able to migrate between them.
 
 #### `#Script`
 
-The `sharp` Project Template is configured to develop Websites using [#Script](https://sharpscript.net), a simpler and cleaner alternative to Razor that lets you utilize simple Template Expressions for evaluating Server logic in `.html` pages. Templates doesn't require any precompilation, is easier to learn and more intuitive for non-programmers that's more suitable for a [number of use-cases](https://sharpscript.net/usecases/). Use templates if you want an [alternative to Razor](/releases/v4.5.14#why-templates) syntax and the heavy machinery required to support it.
+The `sharp` Project Template is configured to develop Websites using [#Script](https://sharpscript.net), a simpler and cleaner alternative to Razor that lets you utilize simple Template Expressions for evaluating Server logic in `.html` pages. Templates doesn't require any precompilation, is easier to learn and more intuitive for non-programmers that's more suitable for a [number of use-cases](https://sharpscript.net/usecases/). Use templates if you want an [alternative to Razor](/releases/v4_5_14#why-templates) syntax and the heavy machinery required to support it.
 
 #### Hot Reloading
 
@@ -1589,6 +1589,6 @@ await Task.Delay(ExecUtils.CalculateFullJitterBackOffDelay(retriesAttempted));
 ```
 
 
-# [v4.5.14 Release Notes](/releases/v4.5.14)
+# [v4.5.14 Release Notes](/releases/v4_5_14)
 
 
