--- a/docs/releases/v5_4.md
+++ b/docs/releases/v5_4.md
@@ -3,8 +3,8 @@ title: v5.4 Release Notes
 slug: v5-4
 ---
 
-This ended up being our funnest releases in which we've built upon [significant enhancements](/releases/v5.2#servicestack-templates-remastered) 
-made to Templates in our [last release](/releases/v5.2) just a few weeks ago, to create some fun an exciting solutions which we're super excited to share:
+This ended up being our funnest releases in which we've built upon [significant enhancements](/releases/v5_2#servicestack-templates-remastered) 
+made to Templates in our [last release](/releases/v5_2) just a few weeks ago, to create some fun an exciting solutions which we're super excited to share:
 
 ## .NET Core Windows Desktop Apps!
 
@@ -1199,4 +1199,4 @@ escaping behavior is most useful:
 :::
 
 
-# [v5.2 Release Notes](/releases/v5.2)
+# [v5.2 Release Notes](/releases/v5_2)
