--- a/docs/releases/v5_5.md
+++ b/docs/releases/v5_5.md
@@ -4109,7 +4109,7 @@ var mqCollection = bgService.GetCollection(typeof(Poco));
 Dictionary<string, long> statsMap = mqCollection.GetDescriptionMap();
 ```
 
-Which returns the text info that [mqCollection.GetDescription()][/background-mq#mq-status] returns, but in a structured Dictionary using the keys:
+Which returns the text info that [mqCollection.GetDescription()](/background-mq#mq-status) returns, but in a structured Dictionary using the keys:
 
  - `ThreadCount`
  - `TotalMessagesAdded`
