--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -5,27 +5,26 @@ slug: v5-13
 
 [![](../images/release-notes/net6-released.png)](https://devblogs.microsoft.com/dotnet/announcing-net-6/)
 
-We've cut this release cadence short to focus on putting out a quality release that can take advantage 
-of the latest and best runtime of .NET. In a lot of ways .NET 6 marks the start of a new era for .NET
-with the first LTS release after the end of the .NET Framework and .NET Standard with only 1 actively
-developed runtime going forward.
+We've cut this release cadence short to focus on putting out a quality release to take advantage 
+of the [newest and best .NET runtime yet!](https://devblogs.microsoft.com/dotnet/announcing-net-6/)
 
-In alignment with .NET's future we'll also be looking to embrace new .NET runtime features and provide better
-integration with .NET 6.0 idioms so that ServiceStack can be regarded as just another module registered
-in an ASP .NET Core App's pipeline allowing knowledge to be more reusably shared. Expect more seamless integration 
-in future feature releases.
+In a lot of ways .NET 6 marks the start of a new era for .NET with the first LTS release after the end of 
+the .NET Framework and .NET Standard with only 1 actively developed runtime going forward.
+
+In alignment with .NET's future we're looking to embracing new .NET runtime features and provide better
+integration with .NET 6's development model so ServiceStack can be regarded as another module in an ASP .NET Core App's pipeline, 
+allowing knowledge to be more reusably shared and are continuing to work on deeper integrations in future releases.
 
 ## net6.0 TFM builds added to all packages
 
-This release lays the foundation for the new style of Apps promoted by .NET 6.0 where we've added a new
-**net6.0** TFM on all of ServiceStack's active NuGet packages. Previously we delivered ServiceStack's ASP.NET Core
-functionality in **.NET Standard 2.0** .dll's whose builds have served running ServiceStack on all .NET Core 
-runtimes dating back from **.NET Core 2.x**. 
+This release lays the foundation for the new style of Apps promoted by .NET 6.0 starting with new
+**net6.0** TFM builds added to all active ServiceStack NuGet packages. Previously ServiceStack's ASP .NET Core
+functionality was delivered in **.NET Standard 2.0** .dll's whose builds have served running ServiceStack on all .NET Core 
+runtimes dating back to **.NET Core 2.x**. 
 
-Now that .NET Standard has became obsolete with .NET 6's LTS release, we've added **net6.0** target builds which
-allows us to reference the latest versions of each ASP.NET Core dependency we use, including the recommendation
-of referencing the **Microsoft.AspNetCore.App** `<FrameworkReference/>` bundled with each .NET installation, 
-a good example of this is seen in 
+The new **net6.0** target builds has allowed us to reference the latest versions of each ASP .NET Core dependency we use, 
+including the recommendation of referencing the **Microsoft.AspNetCore.App** `<FrameworkReference/>` bundled with each 
+.NET installation, a good example of this is seen in 
 [ServiceStack.csproj](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/ServiceStack.csproj):
 
 ```xml
@@ -74,12 +73,12 @@ app.MapGet("/", () => "Hello World");
 app.Run();
 ```
 
-As with most new radical features the contrast can be jarring initially, with one of the initial criticisms being that it lacks the
+As with most new radical features the contrast can be initially jarring, with one of the initial criticisms being that it lacks the
 forced structure of the `Startup` and encourages App's to mix all features into a single class.
 
 Whilst we agree it's bad practice for large Apps to maintain all their configuration in a single file, we also believe .NET 6's new 
-Hosting Model allows for simpler App configuration since the `Program.cs` for most new **net6.0** ServiceStack Project Templates
-now looks like:
+Hosting Model offers a simpler App configuration as now the `Program.cs` for most new **net6.0** ServiceStack Project Templates
+looks like:
 
 ```csharp
 var builder = WebApplication.CreateBuilder(args);
@@ -98,7 +97,7 @@ if (!app.Environment.IsDevelopment())
 app.Run();
 ```
 
-That's because now all ServiceStack's features are loaded using .NET's `HostingStartup` feature, including the `AppHost` that's
+That's because now all ServiceStack's features are loaded using .NET's `HostingStartup`, including ServiceStack's `AppHost` itself that's
 now being configured in [Configure.AppHost.cs](https://github.com/NetCoreTemplates/web/blob/master/MyApp/Configure.AppHost.cs), e.g:
 
 ```csharp
@@ -110,10 +109,10 @@ public class AppHost : AppHostBase, IHostingStartup
 {
     public void Configure(IWebHostBuilder builder) => builder
         .ConfigureServices(services => {
-            // Configure ASP.NET Core IOC Dependencies
+            // Configure ASP .NET Core IOC Dependencies
         })
         .Configure(app => {
-            // Configure ASP.NET Core App
+            // Configure ASP .NET Core App
             if (!HasInit)
                 app.UseServiceStack(new AppHost());
         });
@@ -145,7 +144,7 @@ to precisely control where ServiceStack is registered within its preferred ASP .
 
 ## New Modular Startup
 
-Our [Modular Startup](/modular-startup) approach has encouraged the modular configuration of ServiceStack ASP.NET Core Apps 
+Our [Modular Startup](/modular-startup) approach has encouraged the modular configuration of ServiceStack ASP .NET Core Apps 
 using feature encapsulated configuration blocks for a number of years. This has enabled ServiceStack Apps to be easily composed
 with just the features developers need, either at project creation with servicestack.net/start page or after
 a project's creation where features can easily be added and removed using the command-line [mix tool](/mix-tool).
@@ -153,7 +152,7 @@ a project's creation where features can easily be added and removed using the co
 We're now embracing .NET 6's idiom and have rewritten all our [mix gist config files](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8) to adopt its `HostingStartup` which is better able to load modular Startup configuration 
 without assembly scanning.
 
-This is a standard feature we can use this to configure Mongo DB in any ASP.NET Core App with:
+This is a standard feature we can use this to configure Mongo DB in any ASP .NET Core App with:
 
 ```bash
 $ x mix mongodb
@@ -182,8 +181,8 @@ namespace MyApp
 }
 ```
 
-As it's not a ServiceStack feature it can be used to configure ASP.NET Core Apps with modular features, 
-e.g. we can easily configure [Marten](https://martendb.io) in an ASP.NET Core App with:
+As it's not a ServiceStack feature it can be used to configure ASP .NET Core Apps with modular features, 
+e.g. we can easily configure [Marten](https://martendb.io) in an ASP .NET Core App with:
 
 ```bash
 $ x mix marten
@@ -409,7 +408,7 @@ which we expect to be a welcomed addition to Data Models so we've added built-in
 
 ## Validation now a pre-configured Feature
 
-Like ASP.NET Core itself, ServiceStack is primarily a modular Pay-to-Play framework with its functionality included as 
+Like ASP .NET Core itself, ServiceStack is primarily a modular Pay-to-Play framework with its functionality included as 
 removable plugins where we [limit built-ins to the bare essentials](/plugins#auto-registered-plugins) so unused features
 have no effect at runtime as well as to not prohibitively discourage better implementations from competing with defaults.
 
