--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -313,7 +313,7 @@ namespace MyApp
 }
 ```
 
-To cater for all plugins, the AppHost can be customized at its different initialization stages:
+To cater for all plugins, AppHost configurations can be registered at different stages within the AppHost's initialization:
 
 ```csharp
 public void Configure(IWebHostBuilder builder) => builder
