--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -485,14 +485,14 @@ If you run into any issues please let us know in the [Customer Forums](https://f
 
 In an effort to streamline the supported runtimes ServiceStack runs on we intend on following 
 [Microsoft .NET Framework end of support dates](https://docs.microsoft.com/en-us/lifecycle/products/microsoft-net-framework) and drop
-support for .NET v4.5 in the release following its support end date at April 26, 2022. 
+support for .NET v4.5 in after its support end date at **April 26, 2022**. 
 
-We've already forced to maintain multiple minimum .NET Framework version requirements in a number of packages with 3rd Party dependencies which 
-lack .NET 4.5 TFM builds so our packages currently have a mix of different minimum version requirements. To consolidate all .NET Framework
+We're already forced to maintain multiple minimum .NET Framework version requirements in a number of packages with 3rd Party dependencies which 
+lacking .NET 4.5 TFM builds so our packages currently have a mix of different minimum version requirements. To consolidate all .NET Framework
 builds to use a single version we plan on upgrading the **minimum version** to **.NET Framework v4.7.2** after **April 26, 2022**.
 
 If you're currently running ServiceStack on .NET **v4.5 or v4.6** and intend to continue updating to newer versions we encourage you to start 
-your planning to upgrade to a newer .NET Framework **on or after v4.7.2**. 
+planning your upgrade to a newer .NET Framework **on or after v4.7.2**. 
 
 If you're unable to upgrade for any reason please let us know in the [Customer Forums](https://forums.servicestack.net) so we can measure
-the number of Customers affected so we can consider lowering our minimum .NET Framework requirement.
+the number of Customers affected to consider lowering our minimum .NET Framework requirements.
