--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -13,7 +13,7 @@ the .NET Framework and .NET Standard with only 1 actively developed runtime goin
 
 In alignment with .NET's future we're looking to embracing new .NET runtime features and provide better
 integration with .NET 6's development model so ServiceStack can be regarded as another module in an ASP .NET Core App's pipeline, 
-allowing knowledge to be more reusably shared and are continuing to work on deeper integrations in future releases.
+allowing knowledge to be more reusably shared and to that end will be continuing to work on deeper integrations in future releases.
 
 ## net6.0 TFM builds added to all packages
 
