--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -152,7 +152,7 @@ a project's creation where features can easily be added and removed using the co
 We're now embracing .NET 6's idiom and have rewritten all our [mix gist config files](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8) to adopt its `HostingStartup` which is better able to load modular Startup configuration 
 without assembly scanning.
 
-This is a standard feature we can use this to configure Mongo DB in any ASP .NET Core App with:
+This is a standard ASP .NET Core feature that we can use to configure Mongo DB in any ASP .NET Core App with:
 
 ```bash
 $ x mix mongodb
