--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -181,7 +181,7 @@ namespace MyApp
 }
 ```
 
-As it's not a ServiceStack feature it can be used to configure ASP .NET Core Apps with modular features, 
+As it's not a ServiceStack feature it can be used to configure ASP .NET Core Apps with any feature, 
 e.g. we can easily configure [Marten](https://martendb.io) in an ASP .NET Core App with:
 
 ```bash
