--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -321,28 +321,28 @@ public void Configure(IWebHostBuilder builder) => builder
         beforeConfigure:    appHost => /* fired before AppHost.Configure() */, 
         afterConfigure:     appHost => /* fired after AppHost.Configure() */,
         afterPluginsLoaded: appHost => /* fired after plugins are loaded */,
-        afterAppHostInit:   appHost => /* fired after the AppHost has initialized */);
+        afterAppHostInit:   appHost => /* fired after AppHost has initialized */);
 ```
 
 ### Removing Features
 
 The benefits of adopting a modular approach to AppHost configuration is the same as general organizational code structure which results
 in better decoupling and cohesion where it's easier to determine all the dependencies of a feature, easier to update, less chance of
-unintended side-effects, easier to share standard configuration amongst multiple projects and easier to remove the feature completely,
-either temporarily if needing to isolate & debug a runtime issue which you can do temporarily with:
+unintended side-effects, easier to share standard configuration amongst multiple projects and easier to remove the feature entirely,
+either temporarily if needing to isolate & debug a runtime issue by:
 
 ```csharp
 // [assembly: HostingStartup(typeof(MyApp.ConfigureAuth))]
 ```
 
-Or easier to permanently replace or remove features by either directly deleting the `*.cs` source files or by undoing adding the feature
+Or easier to permanently replace or remove features by either directly deleting the isolated `*.cs` source files or by undoing mixing in the feature
 using `mix -delete`, e.g:
 
 ```bash
 $ x mix -delete auth auth-db postgres
 ```
 
-Which works similar to package managers where it removes all files contained within each gist mix.
+Which works similar to package managers where it removes all files contained within each mix gist.
 
 ::: info
 Please see the [Mix HowTo](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8#file-mix_howto-md) to find out how you can contribute your own gist mix features
@@ -350,7 +350,8 @@ Please see the [Mix HowTo](https://gist.github.com/gistlyn/9b32b03f207a191099137
 
 ### Preserve ModularStartup configuration
 
-If you're using an earlier .NET Core runtime you can continue to use ServiceStack's existing `ModularStartup` configuration. 
+Whilst HostingStartup is recommended going forward, its usage optional and you can continue using ServiceStack's existing 
+`ModularStartup` configuration if you're on an earlier .NET Core runtime. 
 
 If you want to upgrade to .NET 6 but don't want to rewrite ServiceStack's existing `ModularStartup` configuration you can enable it
 by calling the `Services.AddModularStartup<AppHost>()` method, e.g:
@@ -360,8 +361,8 @@ var builder = WebApplication.CreateBuilder(args);
 builder.Services.AddModularStartup<AppHost>(builder.Configuration);
 ```
 
-The `AppHost` registration has become slightly easier to enable ServiceStack in this release as you no longer need to inject 
-the `IConfiguration` class which is automatically populated:
+The `AppHost` registration has become slightly easier to enable ServiceStack in this release as you no longer need to manually inject 
+the `IConfiguration` class as it's now automatically populated by default:
 
 ```csharp
 app.UseServiceStack(new AppHost());
@@ -369,11 +370,12 @@ app.UseServiceStack(new AppHost());
 
 ### Migrating to HostingStartup
 
-As we'll be using `HostingStartup` for maintaining all configuration going forward we recommend also migrating to use them.
-For assistance please refer to this [mix diff](https://github.com/ServiceStack/mix/commit/b56746622aa1879e3e6a8cbf835e634f05db30db) 
-showing how each of the existing mix configurations were converted.
+As we'll be using the new `HostingStartup` model going forward we recommend migrating your existing configuration to use them.
 
-For reference the [Existing ModularStartup configuration](https://gist.github.com/gistlyn/7362ea802aef361bbdc21097b6a99e0d)
+To help with this you can refer to the [mix diff](https://github.com/ServiceStack/mix/commit/b56746622aa1879e3e6a8cbf835e634f05db30db) 
+showing how each of the existing mix configurations were converted to the new model.
+
+To support older projects the [Existing ModularStartup configuration](https://gist.github.com/gistlyn/7362ea802aef361bbdc21097b6a99e0d)
 can still be used for when running on earlier .NET Core runtimes with the mix tool by setting its gist Id in the `MIX_SOURCE` 
 Environment Variable, e.g:
 
@@ -386,9 +388,9 @@ Which will use the older mix configuration as its source.
 ## All project templates upgraded to .NET 6
 
 As an LTS release we expect everyone will want to upgrade to .NET 6 as soon as possible to take advantage of .NET's best & fastest 
-runtime yet. We're already started using it in production and haven't see any reason not to upgrade yet. 
+runtime yet. We're already using .NET 6 in production and haven't come across any reason not to upgrade yet. 
 
-You can create new project templates with [x new](/dotnet-new):
+With the project templates upgraded, you can now create a new ServiceStack .NET 6 App with [x new](/dotnet-new):
 
 ```csharp
 $ x new
